--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-moment": "^0.9.6",
     "react-native": "^0.62.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-audio-recorder-player": "^2.5.2",
     "react-native-circular-progress": "^1.3.3",
     "react-native-detect-navbar-android": "^0.3.0",
     "react-native-device-info": "^5.6.1",
@@ -48,6 +49,7 @@
     "react-native-modal": "^7.0.2",
     "react-native-modalbox": "^1.6.0",
     "react-native-parallax-header": "^1.1.3",
+    "react-native-permissions": "^2.1.5",
     "react-native-popup-menu": "^0.15.7",
     "react-native-progress": "^4.0.3",
     "react-native-raw-bottom-sheet": "^2.1.0",
@@ -59,6 +61,8 @@
     "react-native-simple-toast": "^0.1.1",
     "react-native-slider": "^0.11.0",
     "react-native-snap-carousel": "^3.9.0",
+    "react-native-sound": "^0.11.0",
+    "react-native-sound-player": "^0.10.4",
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^9.13.2",
     "react-native-svg-charts": "^5.4.0",
