--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/cli": "^4.7.0",
     "@react-native-community/google-signin": "^3.0.4",
+    "@react-native-community/netinfo": "^5.9.5",
     "@react-native-community/slider": "^2.0.8",
     "@react-native-firebase/app": "^6.0.1",
     "@react-native-firebase/auth": "^6.0.1",
@@ -40,6 +41,7 @@
     "react-native-elements": "^1.2.7",
     "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-fbsdk": "^1.0.4",
+    "react-native-flags": "^1.0.0",
     "react-native-fontawesome": "^5.7.0",
     "react-native-gesture-handler": "^1.4.0",
     "react-native-image-picker": "^1.0.1",
