--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -224,6 +224,7 @@ dependencies {
    // implementation 'com.google.firebase:firebase-firestore:21.1.0'
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    compile project(':react-native-get-real-path')
     compile project(':react-native-detect-navbar-android')
     compile(project(':react-native-device-info')) {
         exclude group: 'com.google.android.gms'
