--- a/package.json
+++ b/package.json
@@ -38,12 +38,16 @@
     "react-native-circular-progress": "^1.3.3",
     "react-native-detect-navbar-android": "^0.3.0",
     "react-native-device-info": "^5.6.1",
+    "react-native-document-picker": "^3.5.4",
     "react-native-elements": "^1.2.7",
     "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-fbsdk": "^1.0.4",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-flags": "^1.0.0",
     "react-native-fontawesome": "^5.7.0",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.4.0",
+    "react-native-get-real-path": "git+https://github.com/Wraptime/react-native-get-real-path.git",
     "react-native-image-picker": "^1.0.1",
     "react-native-image-resizer": "^1.2.0",
     "react-native-linear-gradient": "^2.5.4",
@@ -73,6 +77,7 @@
     "react-native-text-ticker": "^1.3.0",
     "react-native-track-player": "^1.2.3",
     "react-native-video": "^4.4.1",
+    "react-native-walkthrough-tooltip": "^1.1.10",
     "react-navigation": "^4.3.1",
     "react-navigation-backhandler": "^1.4.0",
     "react-navigation-drawer": "^2.3.3",
