--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-native-text-ticker": "^1.3.0",
     "react-native-track-player": "^1.2.3",
     "react-native-video": "^4.4.1",
+    "react-native-video-controls": "^2.6.0",
     "react-native-walkthrough-tooltip": "^1.1.10",
     "react-navigation": "^4.3.1",
     "react-navigation-backhandler": "^1.4.0",
