--- a/package.json
+++ b/package.json
@@ -46,9 +46,10 @@
     "react-native-flags": "^1.0.0",
     "react-native-fontawesome": "^5.7.0",
     "react-native-fs": "^2.16.6",
-    "react-native-gesture-handler": "^1.4.0",
+    "react-native-gesture-handler": "^1.6.1",
     "react-native-get-real-path": "git+https://github.com/Wraptime/react-native-get-real-path.git",
     "react-native-image-colors": "^1.2.2",
+    "react-native-image-pan-zoom": "^2.1.12",
     "react-native-image-picker": "^1.0.1",
     "react-native-image-resizer": "^1.2.0",
     "react-native-linear-gradient": "^2.5.4",
@@ -62,8 +63,9 @@
     "react-native-progress": "^4.0.3",
     "react-native-raw-bottom-sheet": "^2.1.0",
     "react-native-react-native-recorder": "file:react-native-react-native-recorder",
-    "react-native-reanimated": "^1.3.0",
+    "react-native-reanimated": "^1.9.0",
     "react-native-reanimated-slider": "^1.0.5",
+    "react-native-render-html": "^4.2.3",
     "react-native-screens": "^1.0.0-alpha.23",
     "react-native-shimmer": "^0.6.0",
     "react-native-simple-toast": "^0.1.1",
@@ -81,6 +83,7 @@
     "react-native-video": "^4.4.1",
     "react-native-video-controls": "^2.6.0",
     "react-native-walkthrough-tooltip": "^1.1.10",
+    "react-native-webview": "^10.8.0",
     "react-navigation": "^4.3.1",
     "react-navigation-backhandler": "^1.4.0",
     "react-navigation-drawer": "^2.3.3",
