--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -140,8 +140,8 @@ android {
         applicationId "com.papyrus_60"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 25
-        versionName "1.0.24"
+        versionCode 28
+        versionName "1.0.27"
         multiDexEnabled true
     }
     splits {
@@ -238,6 +238,10 @@ dependencies {
     } else {
       implementation jscFlavor
     }
+    implementation "com.google.android.material:material:1.1.0-alpha06"
+
+    implementation 'com.google.android.play:core:1.7.3' // add it at the end
+
 }
 
 // Run this once to be able to run the application with BUCK
